Nearly finished second section, need to fix spacing and text alignment still.

--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,22 @@
 * {
     margin: 0;
-    /* outline: 0.1px solid red; */
+    outline: 0.1px solid red;
     font-family: 'Roboto', sans-serif;
 }
 
-.headSec, .secOne, footer{
+ul {
+    list-style-type: none;
+
+}
+
+.headSec,
+.secOne,
+footer {
     background-color: #1F2937;
     color: #F9FAF8;
 }
 
-.headSec{
+.headSec {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -18,7 +25,6 @@
 }
 
 .headSec ul {
-    list-style-type: none;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -31,7 +37,7 @@
     display: flex;
     flex-direction: row;
     padding: 1.5em;
-    
+
 }
 
 .secOne {
@@ -50,7 +56,7 @@
 }
 
 .secOne p {
-    color: #E5E7EB;
+    color: lightgrey;
 }
 
 .secOne button {
@@ -58,8 +64,8 @@
     color: white;
     text-decoration: none;
     font-size: 1rem;
-    border-radius: 15px;
-    padding: 0.5rem 1.5rem 0.5rem 1.5rem;
+    border-radius: 10px;
+    padding: 0.3rem 1.5rem 0.3rem 1.5rem;
     border-color: #3882F6;
     margin-top: 0.5rem;
 }
@@ -72,11 +78,38 @@
     border-radius: 15px;
 }
 
+.secTwo h2 {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+    font-size: 2rem;
+}
+
+.secTwo ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 2rem;
+    margin-left: 11rem;
+    margin-right: 11rem;
+}
+
+.secTwo ul li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .secTwo img {
     width: 10rem;
     height: 10rem;
+    border-color: #3882F6;
+    border-radius: 15px;
+    border-width: medium;
 }
+
 .secThree {
     background: #E5E7EB;
 }
-
